# backend

./: .env.example  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  app.py  config.py  db.py  lifespan.py
migrations/: 001_initial.sql
src/: config.rs  main.rs
src/auth/: csrf.rs  extractor.rs  jwt.rs  mod.rs  password.rs
src/auth/oauth/: apple.rs  github.rs  google.rs  mod.rs
src/dto/: auth.rs
src/errors/: auth.rs  mod.rs
src/models/: user.rs
src/routes/: auth.rs  mod.rs
