[package]
name = "tripchive-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }

