[package]
name = "tripchive-backend"
version = "0.1.0"
edition = "2024"
description = "Backend API for Tripchive transit journey tracker"
license = "MIT"
repository = "https://github.com/tripchive/backend"
readme = "README.md"
keywords = ["transit", "tracking", "api"]
categories = ["web-programming"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }

[lints.clippy]
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
