[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
    "ruff>=0.15.6",
    "ty>=0.0.22",
]

[tool.poe.tasks]
dev = "python -m app"
lint = "ruff check ."
typecheck = "ty check"

[tool.ty.environment]
python = ".venv"
